2010-03-22  Maciej Stachowiak  <mjs@apple.com>

        (Not reviewed.)

        Add example of accessible ASCII art for HTML WG.

        * demos/accessible-ascii-art: Added.
        * demos/accessible-ascii-art/butterfly.html: Added.

2010-03-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        WebKit blog should be valid HTML5
        https://bugs.webkit.org/show_bug.cgi?id=36410

        * blog/wp-content/themes/webkit/comments-popup.php:
        * blog/wp-content/themes/webkit/footer.php:
        * blog/wp-content/themes/webkit/header.php:

2010-03-20  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        Fix a bunch of HTML5 validation errors on various pages.
        https://bugs.webkit.org/show_bug.cgi?id=36409

        * building/build.html:
        * building/checkout.html:
        * building/debug.html:
        * building/run.html:
        * building/tools.html:
        * coding/coding-style.html:
        * coding/contributing.html:
        * coding/major-objects.html:
        * css/main.css:
        (.asciiart):
        * demos/index.html:
        * header.inc:
        * projects/compat/index.html:
        * projects/css/index.html:
        * projects/documentation/index.html:
        * projects/goals.html:
        * projects/index.html:
        * projects/mathml/index.html:
        * quality/bugpriorities.html:
        * quality/bugwriting.html:
        * quality/crashlogs.html:
        * quality/lifecycle.html:
        * quality/testing.html:
        * quality/testwriting.html:

2010-03-19  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Mark Rowe.

        webkit.org should use the HTML5 doctype
        https://bugs.webkit.org/show_bug.cgi?id=36407

        * header.inc:
        * misc/drosera/index.html:
        * perf/slickspeed/system/index.php:
        * perf/slickspeed/system/template.php:
        * specs/index.html:

2010-03-19  Maciej Stachowiak  <mjs@apple.com>
