@@ -1,0 +1,43 @@
+<!DOCTYPE html>
+<html>
+<head>
+<title>Overlay</title>
+<style>
+figure { display: block; }
+figcaption { display: block; }
+</style>
+</head>
+<body>
+<figure role="img" aria-labeledby="butterfly-caption">
+<pre>
+                                     , 
+                                    ;o\ 
+                                    ;Ob`. 
+                                   ;OOOOb`. 
+                                  ;OOOOOY" ) 
+                                 ;OOOO' ,%%) 
+                             \  /OOO ,%%%%,%\ 
+                              |:  ,%%%%%%;%%/ 
+                              ||,%%%%%%%%%%/ 
+                              ;|%%%%%%%%%'/`-'"`. 
+                             /: %%%%%%%%'/ c$$$$.`. 
+                `.______     \ \%%%%%%%'/.$$YF"Y$: ) 
+              _________ "`.\`\o \`%%' ,',$F,.   $F ) 
+     ___,--""'dOOO;,:%%`-._ o_,O_   ,',"',d88)  '  ) 
+  -"'. YOOOOOOO';%%%%%%%%%;`-O   )_     ,X888F   _/ 
+      \ YOOOO',%%%%%%%%%%Y    \__;`),-.  `""F  ,' 
+       \ `" ,%%%%%%%%%%,' _,-   \-' \_ `------' 
+        \_ %%%%',%%%%%_,-' ,;    ( _,-\ 
+          `-.__`%%',-' .c$$'     |\-_,-\ 
+               `""; ,$$$',md8oY  : `\_,') 
+                 ( ,$$$F `88888  ;   `--' 
+                  \`$$(    `""' / 
+                   \`"$$c'   _,' 
+                    `.____,-' 
+
+
+</pre>
+<figcaption id="butterfly-caption">ASCII art of a butterfly</figcaption>
+</figure>
+</body>
+</html>
